--- a/app/templates/partials/navbar.html
+++ b/app/templates/partials/navbar.html
@@ -38,6 +38,15 @@
                         <i class="fas fa-volume-up me-1"></i>Soundscapepipe
                     </a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" 
+                       href="/data/files" 
+                       target="_blank" 
+                       title="File Browser (External)">
+                        <i class="fas fa-folder-open me-1"></i>Data
+                        <i class="fas fa-external-link-alt ms-1" style="font-size: 0.75em;"></i>
+                    </a>
+                </li>
             </ul>
             <div class="navbar-nav ms-auto">
                 <div class="nav-item d-flex align-items-center">
