--- a/app/templates/soundscapepipe.html
+++ b/app/templates/soundscapepipe.html
@@ -877,7 +877,7 @@
                                                x-model.number="config.lat"
                                                min="-90"
                                                max="90"
-                                               step="0.00001"
+                                               step="0.00000001"
                                                @input="updateMarkerFromInputs"
                                                required>
                                         <div class="form-text">Station latitude (-90 to 90)</div>
@@ -889,7 +889,7 @@
                                                x-model.number="config.lon"
                                                min="-180"
                                                max="180"
-                                               step="0.00001"
+                                               step="0.00000001"
                                                @input="updateMarkerFromInputs"
                                                required>
                                         <div class="form-text">Station longitude (-180 to 180)</div>
