--- a/app/templates/partials/navbar.html
+++ b/app/templates/partials/navbar.html
@@ -6,7 +6,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-item">
+                <li class="nav-item" x-show="!serverMode">
                     <a class="nav-link" 
                        href="#status" 
                        @click.prevent="activeConfig = 'status'"
@@ -38,7 +38,7 @@
                         <i class="fas fa-volume-up me-1"></i>Soundscapepipe
                     </a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item" x-show="!serverMode">
                     <a class="nav-link" 
                        href="/data/files" 
                        target="_blank" 
